--- a/app/src/main/res/layout/bottom_make_list.xml
+++ b/app/src/main/res/layout/bottom_make_list.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="56dp">
+    android:layout_height="56dp"
+    android:clickable="true"
+    android:focusable="true"
+    android:background="?android:attr/selectableItemBackground">
     <ImageView
         android:src="@drawable/ic_playlist_add_24dp"
         android:layout_width="24dp"
