--- a/app/src/main/res/layout/bottom_take_task.xml
+++ b/app/src/main/res/layout/bottom_take_task.xml
@@ -1,6 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:background="#FFFFFF"
+    android:layout_height="wrap_content"
+    android:paddingBottom="16dp"
+    android:elevation="4dp">
 
-</RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:src="@drawable/ic_radio_button_unchecked_24dp"
+            android:layout_width="32dp"
+            android:tint="@color/gray_icon"
+            android:layout_height="32dp"
+            android:layout_margin="12dp" />
+
+        <EditText
+            android:id="@+id/take_task_edit"
+            android:inputType="textMultiLine"
+            android:layout_weight="1"
+            android:paddingTop="12dp"
+            android:paddingBottom="12dp"
+            android:scrollbars="vertical"
+            android:maxLines="5"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:hint="Add Task"
+            android:textColor="#333"
+            android:layout_gravity="center_vertical"
+            android:layout_width="match_parent"
+            android:background="#0000"
+            android:layout_height="wrap_content" />
+
+        <ImageView
+            android:id="@+id/voice_input"
+            android:padding="12dp"
+            android:src="@drawable/ic_mic_24dp"
+            android:layout_width="48dp"
+            android:background="?android:attr/selectableItemBackgroundBorderless"
+            android:layout_height="56dp"
+            android:tint="@color/gray_icon" />
+
+        <ImageView
+            android:id="@+id/add_task_button"
+            android:src="@drawable/ic_arrow_upward_24dp"
+            android:layout_width="48dp"
+            android:layout_height="56dp"
+            android:background="?android:attr/selectableItemBackgroundBorderless"
+            android:tint="@color/gray_icon"
+            android:padding="12dp" />
+    </LinearLayout>
+
+    <com.google.android.material.chip.ChipGroup
+        android:layout_width="match_parent"
+        app:chipSpacing="8dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_height="wrap_content">
+
+        <com.google.android.material.chip.Chip
+            android:text="Due date"
+            app:chipIcon="@drawable/ic_date_range_24dp"
+            app:chipIconTint="@color/colorPrimary"
+            app:chipBackgroundColor="@color/chip_background"
+            app:rippleColor="@color/chip_ripple"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <com.google.android.material.chip.Chip
+            android:text="Repeat"
+            app:chipIcon="@drawable/ic_repeat_24dp"
+            app:chipIconTint="@color/colorPrimary"
+            app:chipBackgroundColor="@color/chip_background"
+            app:rippleColor="@color/chip_ripple"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </com.google.android.material.chip.ChipGroup>
+</LinearLayout>
