--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="colorPrimaryDark">#7B1FA2</color>
     <color name="colorAccent">#26C6DA</color>
     <color name="backgroundDark">#000000</color>
+    <color name="gray_icon">#636363</color>
+    <color name="chip_ripple">#EBC4F5</color>
+    <color name="chip_background">#F8F0FA</color>
 </resources>
