--- a/app/src/main/res/layout/single_line_list_item.xml
+++ b/app/src/main/res/layout/single_line_list_item.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="56dp"
+    android:layout_height="52dp"
     android:background="?android:attr/selectableItemBackground">
     <ImageView
         android:layout_width="24dp"
-        android:layout_margin="16dp"
+        android:layout_marginTop="14dp"
+        android:layout_marginBottom="14dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:id="@+id/imageView"
         android:src="@drawable/ic_today_24dp"
         android:tint="#444"
@@ -14,8 +17,9 @@
         android:layout_gravity="center_vertical"
         android:text="First Element"
         android:id="@+id/textView"
-        android:textColor="@android:color/primary_text_light"
-        android:layout_marginStart="16dp"
+        android:fontFamily="sans-serif-medium"
+        android:textColor="#444"
+        android:textSize="15sp"
         android:layout_marginEnd="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
