--- a/app/src/main/res/layout/activity_task_details.xml
+++ b/app/src/main/res/layout/activity_task_details.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".TaskDetailsActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -13,6 +13,7 @@
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
+            app:title="Tasks"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
@@ -20,5 +21,161 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/content_main"
+        android:orientation="vertical"
+        android:layout_marginBottom="48dp"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <androidx.cardview.widget.CardView
+                android:elevation="1dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:src="@drawable/ic_radio_button_unchecked_24dp"
+                        android:layout_width="32dp"
+                        android:tint="@color/gray_icon"
+                        android:layout_height="32dp"
+                        android:layout_margin="12dp" />
+
+                    <EditText
+                        android:id="@+id/take_task_edit"
+                        android:inputType="textMultiLine"
+                        android:layout_weight="1"
+                        android:paddingTop="12dp"
+                        android:paddingBottom="12dp"
+                        android:scrollbars="vertical"
+                        android:maxLines="5"
+                        android:layout_marginStart="16dp"
+                        android:hint="Add Task"
+                        android:textColor="#333"
+                        android:layout_gravity="center_vertical"
+                        android:layout_width="match_parent"
+                        android:background="#0000"
+                        android:layout_height="wrap_content" />
+
+                    <ImageView
+                        android:id="@+id/voice_input"
+                        android:padding="12dp"
+                        android:src="@drawable/ic_mic_24dp"
+                        android:layout_width="48dp"
+                        android:background="?android:attr/selectableItemBackgroundBorderless"
+                        android:layout_height="56dp"
+                        android:tint="@color/gray_icon" />
+
+                    <ImageView
+                        android:id="@+id/add_task_button"
+                        android:src="@drawable/ic_star_border_24dp"
+                        android:layout_width="48dp"
+                        android:layout_height="56dp"
+                        android:background="?android:attr/selectableItemBackgroundBorderless"
+                        android:tint="@color/gray_icon"
+                        android:padding="12dp" />
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_marginTop="8dp"
+                android:elevation="1dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="52dp"
+                    android:background="?android:attr/selectableItemBackground">
+
+                    <ImageView
+                        android:layout_width="24dp"
+                        android:layout_marginTop="14dp"
+                        android:layout_marginBottom="14dp"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginEnd="16dp"
+                        android:id="@+id/iv_due_date"
+                        android:src="@drawable/ic_today_24dp"
+                        android:tint="#444"
+                        android:layout_height="24dp" />
+
+                    <TextView
+                        android:layout_gravity="center_vertical"
+                        android:text="Due Fri, 6 Dec"
+                        android:id="@+id/tv_due_date"
+                        android:fontFamily="sans-serif-medium"
+                        android:textColor="#444"
+                        android:textSize="15sp"
+                        android:layout_marginEnd="16dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:elevation="1dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="52dp"
+                    android:background="?android:attr/selectableItemBackground">
+
+                    <ImageView
+                        android:layout_width="24dp"
+                        android:layout_marginTop="14dp"
+                        android:layout_marginBottom="14dp"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginEnd="16dp"
+                        android:id="@+id/iv_repeat"
+                        android:src="@drawable/ic_repeat_24dp"
+                        android:tint="#444"
+                        android:layout_height="24dp" />
+
+                    <TextView
+                        android:layout_gravity="center_vertical"
+                        android:text="Repeat"
+                        android:id="@+id/tv_repeat"
+                        android:fontFamily="sans-serif-medium"
+                        android:textColor="#444"
+                        android:textSize="15sp"
+                        android:layout_marginEnd="16dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:elevation="1dp"
+                android:layout_marginTop="8dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:layout_margin="16dp"
+                    android:gravity="top"
+                    android:hint="Add note"
+                    android:background="#0000"
+                    android:id="@+id/edit_add_note"
+                    android:lines="5"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </androidx.cardview.widget.CardView>
+
+        </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
