--- a/app/src/main/res/layout/single_line_list_item.xml
+++ b/app/src/main/res/layout/single_line_list_item.xml
@@ -21,6 +21,16 @@
         android:textColor="#444"
         android:textSize="15sp"
         android:layout_marginEnd="16dp"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:textStyle="bold"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_gravity="center_vertical"
+        android:text=""
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 </LinearLayout>
