--- a/app/src/main/res/layout/single_line_list_item.xml
+++ b/app/src/main/res/layout/single_line_list_item.xml
@@ -26,11 +26,12 @@
         android:layout_height="wrap_content" />
 
     <TextView
+        android:id="@+id/countPrimary"
         android:textStyle="bold"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_gravity="center_vertical"
-        android:text=""
+        android:text="0"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 </LinearLayout>
